<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainPageActivity">

    <Button
        android:id="@+id/btnSaved"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="45dp"
        android:onClick="btnSaved_Click"
        android:text="@string/btnSaved"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/btnClear"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:onClick="btnSave_Click"
        android:text="@string/btnSave"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnResult"
        app:layout_constraintVertical_bias="0.108"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtOtherCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTransBankCommission"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtTransBankCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEp"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblTransBankCommission"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00FFC107"
        android:text="@string/lblTransBankCommission"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblEp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblOtherCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#00FFC107"
        android:text="@string/lblOtherCommission"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTransBankCommission"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblAllTaxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="#00FFC107"
        android:text="@string/lblAllTaxes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOtherCommission"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblAllBankCommissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00FFC107"
        android:text="@string/lblAllBankCommissions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTransBankCommissionResult"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblCleanIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFC107"
        android:text="@string/lblCleanIncome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAllBankCommissions"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblTransBankCommissionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00FFC107"
        android:text="@string/lblTransBankCommissionResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAllTaxes"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtEsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIncome"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtEp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEsv"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/lblEp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFC107"
        android:text="@string/lblEp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEsv"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblEsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFC107"
        android:text="@string/lblEsv"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblIncome"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lblIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#00FFC107"
        android:text="@string/lblIncome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:onClick="btnResult_Click"
        android:text="@string/btnResult"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCleanIncome"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:onClick="btnClear_Click"
        android:text="@string/btnClear"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/btnResult"
        app:layout_constraintTop_toBottomOf="@+id/lblCleanIncome"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAllTaxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtAllTaxes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOtherCommission"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtTransBankCommissionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtTransBankCommissionResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAllTaxes"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtAllBankCommissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtAllBankCommissions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTransBankCommissionResult"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtCleanIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtCleanIncome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAllBankCommissions"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>